step 4 phase 3 completed removed the backend authentication and authirisation mechanism and fully dependnt on the gateway

--- a/backend-service/.env.example
+++ b/backend-service/.env.example
@@ -1,5 +1,12 @@
-# Authorization Source Configuration
-# Controls which identity source is used for authorization decisions
-# Options: "jwt" | "gateway"
-# Default: "gateway"
+# Authorization Configuration - Phase 3
+# Gateway is the SOLE authorization authority
+# Backend is a trusted execution service only
+
+# REQUIRED: Must be 'gateway' (backend will fail to start otherwise)
 AUTHZ_SOURCE=gateway
+
+# JWT Validation Mode (optional defense in depth)
+# Options: "enforce" | "audit"
+# - enforce: Reject invalid JWTs (default)
+# - audit: Validate JWT and log result, but do not block
+JWT_VALIDATION_MODE=enforce
