--- a/backend-service/package.json
+++ b/backend-service/package.json
@@ -8,12 +8,17 @@
     "start": "node src/server.js",
     "dev": "node --watch src/server.js"
   },
-  "keywords": ["backend", "jwt", "auth"],
+  "keywords": [
+    "backend",
+    "jwt",
+    "auth"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.2"
   },
   "engines": {
     "node": ">=18.0.0"
